--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI = 'mongodb+srv://surajvsonkar:W6MTjvIbEeqwlDWq@cluster0.z1ncq.mongodb.net/paytm'
+MONGO_URI=mongodb+srv://surajvsonkar:W6MTjvIbEeqwlDWq@cluster0.z1ncq.mongodb.net/paytm
